--- a/coqpilot.opam
+++ b/coqpilot.opam
@@ -33,3 +33,12 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/K-dizzled/coqpilot-client-tactic.git"
+post-messages: ["
+--- CoqPilot successfully installed ---
+" {success}]
+tags: [
+    "category:Coq Extensions"
+    "keyword:Coq Tactic"
+    "keyword:Proof Automation"
+    "logpath:Coqpilot"
+]
