Create a POC HTTP client, setup HTTP lib

--- a/theories/dune
+++ b/theories/dune
@@ -2,8 +2,6 @@
  (name Coqpilot)
  (package coqpilot)
  (flags -q -noinit)
- (plugins
-   coqpilot.tactics-plugin
- )
+ (plugins coqpilot.tactics-plugin)
 )
 (include_subdirs qualified)
