--- a/coqpilot.opam
+++ b/coqpilot.opam
@@ -10,13 +10,17 @@ license: "MIT"
 homepage: "https://github.com/K-dizzled/coqpilot-client-tactic"
 bug-reports: "https://github.com/K-dizzled/coqpilot-client-tactic/issues"
 depends: [
-  "ocaml" {>= "4.13.1"}
+  "ocaml" {>= "4.14.0"}
   "dune" {>= "3.8"}
   "dune-site" {>= "2.9.1"}
   "opam-client" {>= "2.1.0"}
   "cmdliner" {>= "1.1.0"}
   "coq" {>= "8.19.0"}
   "conf-git"
+  "cohttp"
+  "cohttp-lwt-unix"
+  "cohttp-async"
+  "lwt_ssl"
   "bos" {>= "0.2.1"}
   "odoc" {with-doc}
 ]
