--- a/src/dune
+++ b/src/dune
@@ -3,6 +3,6 @@
  (public_name coqpilot.tactics-plugin)
  (synopsis "CoqPilot")
  (flags :standard -rectypes -w -27 -warn-error -A)
- (libraries coq-core.vernac threads.posix coq-core.plugins.ltac))
+ (libraries coq-core.vernac threads.posix coq-core.plugins.ltac cohttp-lwt-unix yojson))
 
 (coq.pp (modules coqpilot_tactics))
